# feed-curator

./: .gitignore  CLAUDE.md  LICENSE  README.md  env.template  mise.toml  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.claude/: settings.json
.claude/hooks/: check-language.sh
.claude/skills/briefing/: SKILL.md
.claude/skills/curate/: SKILL.md
.claude/skills/discover-feeds/: SKILL.md
.claude/skills/fetch-feeds/: SKILL.md
docs/: zenn-article.md
examples/: sample-digest.md  starter-feeds.json
scripts/: build-binary.ts
src/: ai-backend.ts  ai.test.ts  ai.ts  article.test.ts  article.ts  briefing-data.ts  cli.ts  config.ts  date.test.ts  date.ts  db.ts  dedupe.test.ts  dedupe.ts  digest.test.ts  digest.ts  eval.test.ts  eval.ts  feed.test.ts  feed.ts  fuzzy.test.ts  integration.test.ts  pbt-advanced.test.ts  pbt-aggressive.test.ts  pbt-attack.test.ts  pbt-curation.test.ts  pbt-memo.test.ts  pbt.test.ts  preferences.ts  profile.test.ts  profile.ts  rss.test.ts  rss.ts  server-attack.test.ts  server.test.ts  server.ts  sse.test.ts  starter-feeds.test.ts  tag.test.ts  tag.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/web/: html.test.ts  html.ts  scripts.js  styles.css
tasks/: bugs.md  web-ui-guide.md
