[package]
name = "feed-curator-desktop"
version = "0.6.1"
description = "Feed Curator Desktop — AI-powered RSS briefings"
authors = ["Ryoichi Izumita <r.izumita@caph.jp>"]
license = "MIT"
repository = "https://github.com/rizumita/feed-curator"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
open = "5"
tauri-plugin-window-state = "2.4.1"
